# niuma-agent

./: CLAUDE.md  Cargo.toml  README.md  _typos.toml  config.yaml
apps/niuma-cli/: Cargo.toml
apps/niuma-cli/src/: agent.rs  app.rs  config.rs  error.rs  event.rs  logger.rs  main.rs  terminal.rs
apps/niuma-cli/src/ui/: chat.rs  logs.rs  mod.rs  tasks.rs
apps/server/: Cargo.toml
crates/core/: Cargo.toml
crates/niuma-agent/: Cargo.toml
crates/niuma-agent/src/: clarifier.rs  error.rs  executor.rs  intent.rs  lib.rs  persistence.rs  plan_cache.rs  scheduler.rs
crates/niuma-core/: Cargo.toml
crates/niuma-core/src/: config.rs  error.rs  lib.rs  session.rs
crates/niuma-llm/: Cargo.toml
crates/niuma-llm/src/: claude.rs  config.rs  error.rs  lib.rs  openai.rs  provider.rs  types.rs
crates/niuma-tools/: Cargo.toml
crates/niuma-tools/src/: error.rs  lib.rs  mcp.rs  registry.rs  tool.rs
crates/niuma-tools/src/builtin/: file_read.rs  file_write.rs  http.rs  mod.rs  shell.rs
specs/: design.md
