[workspace]
members = ["crates/*", "apps/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Your Name <YourName@yourdomain.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
readme = "README.md"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "io-util", "signal"] }
async-trait = "0.1.88"
futures = "0.3.31"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
uuid = { version = "1.18", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# HTTP client
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "json", "stream"] }

# CLI
clap = { version = "4.6.0", features = ["derive", "env", "string"] }

# TUI
ratatui = "0.30.0"
crossterm = "0.29.0"

# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Workspace crates
niuma-core = { path = "crates/niuma-core" }
niuma-llm = { path = "crates/niuma-llm" }
niuma-tools = { path = "crates/niuma-tools" }
niuma-agent = { path = "crates/niuma-agent" }
