[package]
name = "niuma-agent-server"
description = """

"""
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
niuma-agent-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
