[package]
name = "niuma-agent"
description = "Agent orchestration and execution logic for niuma"
categories = ["development-tools"]
keywords = ["agent", "ai", "orchestration"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
niuma-core.workspace = true
niuma-llm.workspace = true
niuma-tools.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tokio-cron-scheduler.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
