[package]
name = "niuma-core"
description = "Core types and utilities for niuma agent"
categories = ["development-tools"]
keywords = ["agent", "ai", "core"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
