[package]
name = "niuma-tools"
description = "Tool definitions and implementations for niuma agent"
categories = ["development-tools"]
keywords = ["agent", "ai", "tools"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
niuma-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
